--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,36 @@
     box-sizing: border-box;
 }
 
+/* Navbar CSS Start  */
 .nav-item{
     border-left: 1px solid gray !important;
 }
 .nav-link{
     color: white !important;
 }
+.navbar-nav li a{
+    transition: all 0.3s ease-in-out;
+}
+.navbar-nav li a:hover{
+    color: red !important;
+}
+
+
+/* Navbar CSS End  */
+
+/* Footer CSS Start  */
+.footer-menu ul li{
+list-style: none;
+}
+.footer-menu ul li a{
+    color: white;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+}
+.footer-menu ul li a:hover{
+    color: red;
+    
+}
+
+
+/* Footer CSS End  */
