--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,27 @@
     box-sizing: border-box;
 }
 
+
+/* Some important CSS Start */
+
 /* Navbar CSS Start  */
+
+.col-md-6.header-top-2 ul li {
+    list-style: none;
+}
+.col-md-6.header-top-2 ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    padding: 5px;
+    transition: all 0.3s ease-in-out;
+}
+.col-md-6.header-top-2 ul li a:hover{
+    color: aqua;
+}
+
+
+
 .nav-item{
     border-left: 1px solid gray !important;
 }
@@ -17,24 +37,35 @@
 .navbar-nav li a:hover{
     color: red !important;
 }
+.nav-top-font{
+    font-size: 14px;
+}
 
 
 /* Navbar CSS End  */
 
 /* Footer CSS Start  */
+
+.logo-article p{
+    color: white;
+}
 .footer-menu ul li{
 list-style: none;
+margin-bottom: 10px;
 }
 .footer-menu ul li a{
     color: white;
     text-decoration: none;
     transition: all 0.3s ease-in-out;
+    
 }
 .footer-menu ul li a:hover{
     color: red;
     
 }
-
+.heading-text-color{
+    color: white;
+}
 
 /* Footer CSS End  */
 
